restructuring into designer vs partipant experience

--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -496,7 +496,7 @@ The key addition built on the quick cards of the previous phase, that being to p
 
 In phase one I worked with learners when they were creating a wish list of game features to add to their game.
 
-WHERE TO INCLUDE DISCUSSION ON HOW THESE WERE GROUPED. 
+WHERE TO INCLUDE DISCUSSION ON HOW THESE WERE GROUPED.
 
 Some of these were aesthetic in nature to do with the graphical representation of game characters, hazards and background images. Some most accurately described as game mechanics including: jumping on enemies; finding a door or flag to progress to the next level; and collect all food before progressing to next level. Others concerned other fundamental aspects concerning game space including: size of game world,
 
@@ -596,13 +596,42 @@ Code playground provides immediate feedback. I chose a code editing tool set whi
 One of the principles that I prioritised in the choice of tools was that of immediate feedback for participants. For example, in the code editing interface of glitch.com shown in Illustration 1, changes made to the code on the left section take immediate effect in the resultant game on the right side of the screen.
 
 
-#### Phase one Design Tensions
+### Facilitator Design Tensions
 
+Proactive choices.
+Lack user oriented data. Projected experience / intuitive.  
+And drawn from motivations / objectives of researcher. 
+
+#### Facilitator tension in design
+
+
+ **FACILITATOR - Authenticity of coding environment**.  
+
+ Javascript as coding language, Phaser as a game making framework and Glitch as a code environment, are highly authentic and used by both professional coders and enthusiasts alike.
+
+ Javascript is an authentic language, core to modern web pages and applications. Phaser is a professional and enthusiast framework. Glitch is a code playground which while used for learning and which was chosen by Mozilla as a replacement tool for the education focused Thimble, is also used by professionals. In the early selection of tools the use of a framework based on javascript and web technology is driven by authenticity and thus an ability . My work on teach the web for Mozilla was motivated in part in the extensibility of this choice of language which can be compared to block based environments or game specific making tools like game-star mechanics.
+
+  FIND SUPPORT FROM MOZILLA WHITE PAPER - JUSTIFY EFFORT OF JS AS A STARTING LANGUAGE
+
+  Phaser is a javascript framework embedded in html page. Unlike many game making tools this tools set can be extended to other kinds of projects and is a professional and foundational toolset used to build the majority of websites and many phone applications.
+
+### Participant conflicts
+
+
+#### Not sure
 
 **Learner disengagement if game coding is taught in an instructionist / from first principles (especially in younger ages)**
 In my journal notes, I reflect on the difficulty of interupting the flow of making activities once they are underway. I thus began avoiding stopping making to share points to the whole class and avoid demonstrating key concepts on the screen.
 
 
+
+
+
+ **DROP- Learners may not find coding a project a motivating project if it is only a private activity with no authentic audience.**
+ Play Testing - each lesson can help with short term motivation of having a game product ready  for others to play.  Showcase events help longer-term motivation towards and aid prioritisation as learners near the end of their project.
+
+
+#### Identity hardcore coding & disfunctional group work - P1
 
 **Learner anxiety if hardcore coding environment and peer working dynamics**
 One family dropped out and in their exit interview they shared that at one point we looked around and just saw people doing hardcore coding and we no longer felt at home in the environment. In this emergent design, they had mostly completed asset design and narrative development and the only coding remained. I thus wanted to address the tension between completing the project and alienation from just coding.
@@ -616,32 +645,22 @@ I was struck that his incident happened during a session where I had not played 
 -   The value of a stronger buy-in by participants, ideally a greater commitment to the collective making process balanced with thx`e need for low pressure (avoiding a negative sense of obligation). -->
 
 **Encouraging peer learning vs social restrictions**
+
+Asking on email forum not realistic -
 The same family also gave useful feedback about social norms of not bothering people getting in the way of asking for help.
+
+
 
 
 <!-- NOTE See this source
 https://docs.google.com/document/d/1VL8FPnrBUbcpwL1nmGLCsF1t2JjkitQV_3N8DYeFcoM/edit
  -->
 
-**Freedom of participation vs benefitting from parental involvement**
-The process of parents getting in the way of children's not minding jumping in and invading social space struck me. Rather than the larger groups, smaller groups, allowing some children to work by themselves and others with parents. Avoiding large group framentation
-
-**Learners may not find coding a project a motivating project if it is only a private activity with no end audience.**
-
-
-Play Testing - each lesson can help with short term motivation of having a game product ready  for others to play.  Showcase events help longer-term motivation towards and aid prioritisation as learners near the end of their project.
+ **Freedom of participation vs benefitting from parental involvement**
+ The process of parents getting in the way of children's not minding jumping in and invading social space struck me. Rather than the larger groups, smaller groups, allowing some children to work by themselves and others with parents. Avoiding large group framentation
 
 
 
-**Authenticity of coding environment**.  
-
-Javascript as coding language, Phaser as a game making framework and Glitch as a code environment, are highly authentic and used by both professional coders and enthusiasts alike.
-
-Javascript is an authentic language, core to modern web pages and applications. Phaser is a professional and enthusiast framework. Glitch is a code playground which while used for learning and which was chosen by Mozilla as a replacement tool for the education focused Thimble, is also used by professionals. In the early selection of tools the use of a framework based on javascript and web technology is driven by authenticity and thus an ability . My work on teach the web for Mozilla was motivated in part in the extensibility of this choice of language which can be compared to block based environments or game specific making tools like game-star mechanics.
-
- FIND SUPPORT FROM MOZILLA WHITE PAPER - JUSTIFY EFFORT OF JS AS A STARTING LANGUAGE
-
- Phaser is a javascript framework embedded in html page. Unlike many game making tools this tools set can be extended to other kinds of projects and is a professional and foundational toolset used to build the majority of websites and many phone applications.
 
 
 
@@ -650,7 +669,6 @@ Javascript is an authentic language, core to modern web pages and applications. 
 - involvement with mozilla / teach the web
 - authenticity - link between developer community and education, global in scope
 - can use a cut and paste, remix, irreverant approach - link to media activist / hacktivist pirate cultures.
-
 other unexpected Benefits
 
 - could bring in other web creation resource, piskel, -->
