pulling out main conflicts

--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -600,12 +600,10 @@ One of the principles that I prioritised in the choice of tools was that of imme
 
 Proactive choices.
 Lack user oriented data. Projected experience / intuitive.  
-And drawn from motivations / objectives of researcher. 
-
-#### Facilitator tension in design
+And drawn from motivations / objectives of researcher.
 
 
- **FACILITATOR - Authenticity of coding environment**.  
+####  FACILITATOR - Authenticity of coding environment  
 
  Javascript as coding language, Phaser as a game making framework and Glitch as a code environment, are highly authentic and used by both professional coders and enthusiasts alike.
 
@@ -615,8 +613,39 @@ And drawn from motivations / objectives of researcher.
 
   Phaser is a javascript framework embedded in html page. Unlike many game making tools this tools set can be extended to other kinds of projects and is a professional and foundational toolset used to build the majority of websites and many phone applications.
 
-### Participant conflicts
 
+  <!-- An unusual approach so why?
+
+  - involvement with mozilla / teach the web
+  - authenticity - link between developer community and education, global in scope
+  - can use a cut and paste, remix, irreverant approach - link to media activist / hacktivist pirate cultures.
+  other unexpected Benefits
+
+  - could bring in other web creation resource, piskel, -->
+
+
+**Facilitator / Participant - Projected Barrier -  Learners may not find coding a project a motivating project if it is only a private activity with no authentic audience.**
+
+Play Testing - each lesson can help with short term motivation of having a game product ready  for others to play.  Showcase events help longer-term motivation towards and aid prioritisation as learners near the end of their project.
+
+#### Drop? Not important enough for agency
+
+**Drop? Restricted community - e.g. why not scratch?**
+
+Beyond technical considerations regarding scratch and use of physics etc,
+
+Learning technology in community settings can engender feelings of agency and motivation from part of wide network and the  diverse pathways. [@blunden_interdisciplinary_2009.
+
+Time consideration of the process of being involved in an online community may remove time spent doing real life playtesting.
+
+Also - the diversity of creations available on a online commmunity  could remove the more communal experience of the designed limitations.
+
+### Participant conflicts / contractions
+
+Main ones
+
+ 1. Participants stuck / demotivated : scope of ambition to high, collaboration groups too big, clashes of identity not hard core coders, no on-going playtesting
+ 2. Frustrating delays - Not enough support from facilitator/s: especially tech help - no dedicated documents, exiting docs not learner focused, coding process frustrating needing 
 
 #### Not sure
 
@@ -624,25 +653,18 @@ And drawn from motivations / objectives of researcher.
 In my journal notes, I reflect on the difficulty of interupting the flow of making activities once they are underway. I thus began avoiding stopping making to share points to the whole class and avoid demonstrating key concepts on the screen.
 
 
-
-
-
- **DROP- Learners may not find coding a project a motivating project if it is only a private activity with no authentic audience.**
- Play Testing - each lesson can help with short term motivation of having a game product ready  for others to play.  Showcase events help longer-term motivation towards and aid prioritisation as learners near the end of their project.
-
-
 #### Identity hardcore coding & disfunctional group work - P1
 
 **Learner anxiety if hardcore coding environment and peer working dynamics**
 One family dropped out and in their exit interview they shared that at one point we looked around and just saw people doing hardcore coding and we no longer felt at home in the environment. In this emergent design, they had mostly completed asset design and narrative development and the only coding remained. I thus wanted to address the tension between completing the project and alienation from just coding.
 
-<!-- The value of playfulness is illustrated with one exit interview with a parent where they shared their reasons for leaving the program. At one stage after a week where they had missed a session, their family looked around and saw other groups involved in 'hardcore coding' and no longer felt at home. They compared this previous sessions which had more fun and group oriented activity.
+The value of playfulness is illustrated with one exit interview with a parent where they shared their reasons for leaving the program. At one stage after a week where they had missed a session, their family looked around and saw other groups involved in 'hardcore coding' and no longer felt at home. They compared this previous sessions which had more fun and group oriented activity.
 
 I was struck that his incident happened during a session where I had not played customary drama games to create an inclusive environment. The games had been omitted as I was responding to a sense of urgency coming from families to solve problems. The scarcity in facilitator time drove me to crack on supporting families to debug code errors. The incident lead me to greater reflection on ongoing measures needed to prevent participant drop out for due to cultural tensions and negative affect to the working community. These include:
 
 -   An awareness of the danger that those more confident in coding create more involved code problems that need more facilitator time, potentially making others feel less valued.
 -   A concern for the fragility of learners positive affect towards the group game making process and thus the need for initial playful starting and closing activities to be continued beyond initial sessions.
--   The value of a stronger buy-in by participants, ideally a greater commitment to the collective making process balanced with thx`e need for low pressure (avoiding a negative sense of obligation). -->
+-   The value of a stronger buy-in by participants, ideally a greater commitment to the collective making process balanced with the need for low pressure (avoiding a negative sense of obligation).
 
 **Encouraging peer learning vs social restrictions**
 
@@ -662,16 +684,8 @@ https://docs.google.com/document/d/1VL8FPnrBUbcpwL1nmGLCsF1t2JjkitQV_3N8DYeFcoM/
 
 
 
+#### Participant experience of Contradiction - Conflict - not enough support available
 
-
-<!-- An unusual approach so why?
-
-- involvement with mozilla / teach the web
-- authenticity - link between developer community and education, global in scope
-- can use a cut and paste, remix, irreverant approach - link to media activist / hacktivist pirate cultures.
-other unexpected Benefits
-
-- could bring in other web creation resource, piskel, -->
 
 **Learner choice over game design vs templated approach**
 
@@ -687,17 +701,6 @@ In order to accelerate the process of making a game to fit into contextual expec
 
 
 
-**Restricted community - e.g. why not scratch?**
-
-
-
-Beyond technical considerations regarding scratch and use of physics etc,
-
-Learning technology in community settings can engender feelings of agency and motivation from part of wide network and the  diverse pathways. [@blunden_interdisciplinary_2009.
-
-Time consideration of the process of being involved in an online community may remove time spent doing real life playtesting.
-
-Also - the diversity of creations available on a online commmunity  could remove the more communal experience of the designed limitations.
 
 
 
@@ -714,7 +717,7 @@ Most forms of future documentation and support were originated at this stage. Th
  NOTE - how can this be more analytical.  -->
 
 
- **Use of simple code examples which demonstrate the pattern in isolation**
+ **Resolution - Use of simple code examples which demonstrate the pattern in isolation**
 
  Code examples were initially the starting resource. The idea being it was quick to see the behaviour in context. This was changed after this iteration based on the difficulty of finding the relevant section on step-by-step resources.
 
