structing into 2 main conflicts

--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -644,8 +644,8 @@ Also - the diversity of creations available on a online commmunity  could remove
 
 Main ones
 
- 1. Participants stuck / demotivated : scope of ambition to high, collaboration groups too big, clashes of identity not hard core coders, no on-going playtesting
- 2. Frustrating delays - Not enough support from facilitator/s: especially tech help - no dedicated documents, exiting docs not learner focused, coding process frustrating needing 
+ 1. Participants stuck / demotivated : scope of ambition to high,  clashes of identity not hard core coders, no on-going playtesting, collaboration groups too big (transition),
+ 2. Frustrating delays - Not enough support from facilitator/s:  especially tech help - no dedicated documents, exiting docs not learner focused, coding process frustrating needing
 
 #### Not sure
 
@@ -653,7 +653,7 @@ Main ones
 In my journal notes, I reflect on the difficulty of interupting the flow of making activities once they are underway. I thus began avoiding stopping making to share points to the whole class and avoid demonstrating key concepts on the screen.
 
 
-#### Identity hardcore coding & disfunctional group work - P1
+#### One - Identity hardcore coding & disfunctional group work - P1
 
 **Learner anxiety if hardcore coding environment and peer working dynamics**
 One family dropped out and in their exit interview they shared that at one point we looked around and just saw people doing hardcore coding and we no longer felt at home in the environment. In this emergent design, they had mostly completed asset design and narrative development and the only coding remained. I thus wanted to address the tension between completing the project and alienation from just coding.
@@ -666,12 +666,13 @@ I was struck that his incident happened during a session where I had not played 
 -   A concern for the fragility of learners positive affect towards the group game making process and thus the need for initial playful starting and closing activities to be continued beyond initial sessions.
 -   The value of a stronger buy-in by participants, ideally a greater commitment to the collective making process balanced with the need for low pressure (avoiding a negative sense of obligation).
 
-**Encouraging peer learning vs social restrictions**
+
+#### One - Two transition - freeing up collaboration patterns
+
+**Encouraging peer learning vs social restrictions (One and two )**
 
 Asking on email forum not realistic -
 The same family also gave useful feedback about social norms of not bothering people getting in the way of asking for help.
-
-
 
 
 <!-- NOTE See this source
@@ -684,7 +685,7 @@ https://docs.google.com/document/d/1VL8FPnrBUbcpwL1nmGLCsF1t2JjkitQV_3N8DYeFcoM/
 
 
 
-#### Participant experience of Contradiction - Conflict - not enough support available
+#### TWO - Participant experience of Contradiction - Conflict - not enough support available
 
 
 **Learner choice over game design vs templated approach**
@@ -701,11 +702,7 @@ In order to accelerate the process of making a game to fit into contextual expec
 
 
 
-
-
-
-
-#### Phase two - Documentation / Support Tensions
+**Two - Documentation / Support Tensions**
  <!-- NOTE -
  The language used, affordances, 2nd stimulation, practices, needs clarification.
   -->
