disambiguating conflicts / tensions

--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -8,6 +8,8 @@ layout: post
 categories: chapter
 title: 4. Emerging Learning Designs
 ---
+
+
 -   [Research Questions - June 2023](#research-questions---june-2023)
 -   [Chapter Introduction](#chapter-introduction)
 -   [Short vignette illustrating shifts in scope of
@@ -22,22 +24,36 @@ title: 4. Emerging Learning Designs
 -   [Summary of design evolution](#summary-of-design-evolution)
 -   [Commentary on evolution of design by
     Phase](#commentary-on-evolution-of-design-by-phase)
-    -   [Phase one - an exploratory series of game making
-        sessions](#phase-one---an-exploratory-series-of-game-making-sessions)
-    -   [Phase Two](#phase-two)
-    -   [Phase Three](#phase-three)
-    -   [Phase Four](#phase-four)
-        -   [Building Identities as Game Makers
-            (dropped)](#building-identities-as-game-makers-dropped)
+    -   [Phase one and two](#phase-one-and-two)
+    -   [Phase Three & Four](#phase-three-four)
     -   [Phase Five](#phase-five)
 -   [Commentary on tensions emerging - IDEALLY FIND SOME KIND OF
     GROUPING - CURRENLY BY PHASE
     ONLY](#commentary-on-tensions-emerging---ideally-find-some-kind-of-grouping---currenly-by-phase-only)
-    -   [Phase one Tensions](#phase-one-tensions)
-    -   [Phase two - Documentation / Support
-        Tensions](#phase-two---documentation-support-tensions)
-    -   [Tensions and related to navigation of various documentations
-        sources](#tensions-and-related-to-navigation-of-various-documentations-sources)
+-   [Participant Conflicts & and Design
+    Tensions](#participant-conflicts-and-design-tensions)
+    -   [Participant Conflicts /
+        Obstacles](#participant-conflicts-obstacles)
+        -   [Conflict / Barrier - Learners difficulties writing valid
+            code](#conflict-barrier---learners-difficulties-writing-valid-code)
+    -   [Facilitator Design Tensions](#facilitator-design-tensions)
+        -   [FACILITATOR - Authenticity of coding
+            environment](#facilitator---authenticity-of-coding-environment)
+        -   [Drop? Not important enough for
+            agency](#drop-not-important-enough-for-agency)
+    -   [Participant conflicts /
+        contractions](#participant-conflicts-contractions)
+        -   [Not sure](#not-sure)
+        -   [One - Identity hardcore coding & disfunctional group work -
+            P1](#one---identity-hardcore-coding-disfunctional-group-work---p1)
+        -   [One - Two transition - freeing up collaboration
+            patterns](#one---two-transition---freeing-up-collaboration-patterns)
+        -   [TWO - Participant experience of Contradiction - Conflict -
+            not enough support
+            available](#two---participant-experience-of-contradiction---conflict---not-enough-support-available)
+        -   [Tensions and related to navigation of various
+            documentations
+            sources](#tensions-and-related-to-navigation-of-various-documentations-sources)
 -   [Addressing the Play Paradox](#addressing-the-play-paradox)
 -   [Exploring affordances of Key responses to emerging
     tensions](#exploring-affordances-of-key-responses-to-emerging-tensions)
@@ -64,7 +80,6 @@ title: 4. Emerging Learning Designs
     -   [Discussion on tensions in relation to Lit Review and
         REQUESTS](#discussion-on-tensions-in-relation-to-lit-review-and-requests)
 -   [Link to next chapter](#link-to-next-chapter)
-
 
 
 ## Research Questions - June 2023
@@ -553,35 +568,45 @@ To do this I added a learning dimensions map. This is explored in a later sectio
 
 
 
-## Commentary on tensions emerging - IDEALLY FIND SOME KIND OF GROUPING - CURRENLY BY PHASE ONLY
+
+
+
+## Conflicts and design tensions experienced by participants and facilitator/s
+
 
 <!-- As outlined in the table above I carried out four stages of workshops and development with home educator families. I will outline decisions behind the design activities at key stage of activity   -->
+<!--
+**Summary table of tensions ONLINE HERE**
 
-**All Tensions explored in design chapter**
- an evolving table here
+https://docs.google.com/document/d/18HrRPPx0-fj3PXVJTAf2dzYNTBSYGikpV_U0hu46r2c/edit
 
 **3M Matrix tensions ONLINE HERE**
+
 https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/edit
-Matrix of 3M Game Making Model - Pedagogical Features explored through Tensions and Resolutions
+Matrix of 3M Game Making Model - Pedagogical Features explored through Tensions and Resolutions -->
+
+
 <!-- 3 foci and 3M element compared - save for the conclusion/ discussion?
 https://docs.google.com/document/d/1FIPn2dEB2aCKZi5z05j69cnHgpGNXFh1_SPV6h5l12g/edit#heading=h.kci0lnvn7f60 -->
 
-
 <!-- NOTE - DEVELOP THIS ASPECT OF INCLUSIVE ENVIRONMENT TO REDUCE STRESS - MOVE FROM NEXT CHAPTER?  -->
 
+It is useful to to disambiguate key terms at this stage .
 
-## Participant Conflicts & and Design Tensions
+Conflicts / contradictioins  - stop progress - and involve barriers.
 
-Not sure how barriers fit here.
 
-But in Sannino's later work conflicts are vital for TADS - larger shifts.
 
-Design tensions are also noted in this chapter.
-The differing role of instrumental agency, and the work of learning designers to remove  barriers, vs the potential for learners to address and overcome them is relevant here.
+On a smaller scale, design tensions exist. These do not block progress completely but may disrupt some activities.
 
-NOTE STILL NOT SURE HOW TO STRUCTURE - EXAMING
-Conflicts - barriers and tensions below.
-KEEP READING
+Also conbinations of tensions may create longer lasting and more serious conflicts if not resolved in some way.
+
+IN this chapter tensions are observed and potential tension  imagined by the facilitator. And in response interventions or new tools to help increase leaner agency either by offering new tools or removing barriers in process.
+
+It important here to examine the difference between  instrumental agency, and the work of learning designers to remove  barriers, vs the potential for learners to address and overcome them is relevant here.
+
+In Sannino's later work on transformational agency TADS conflicts are examined - greater scope than tensions - thus larger shifts are implied.
+
 
 
 
