--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -8,8 +8,6 @@ layout: post
 categories: chapter
 title: 4. Emerging Learning Designs
 ---
-
-
 -   [Research Questions - June 2023](#research-questions---june-2023)
 -   [Chapter Introduction](#chapter-introduction)
 -   [Short vignette illustrating shifts in scope of
@@ -27,15 +25,8 @@ title: 4. Emerging Learning Designs
     -   [Phase one and two](#phase-one-and-two)
     -   [Phase Three & Four](#phase-three-four)
     -   [Phase Five](#phase-five)
--   [Commentary on tensions emerging - IDEALLY FIND SOME KIND OF
-    GROUPING - CURRENLY BY PHASE
-    ONLY](#commentary-on-tensions-emerging---ideally-find-some-kind-of-grouping---currenly-by-phase-only)
--   [Participant Conflicts & and Design
-    Tensions](#participant-conflicts-and-design-tensions)
-    -   [Participant Conflicts /
-        Obstacles](#participant-conflicts-obstacles)
-        -   [Conflict / Barrier - Learners difficulties writing valid
-            code](#conflict-barrier---learners-difficulties-writing-valid-code)
+-   [Conflicts and design tensions experienced by participants and
+    facilitator/s](#conflicts-and-design-tensions-experienced-by-participants-and-facilitators)
     -   [Facilitator Design Tensions](#facilitator-design-tensions)
         -   [FACILITATOR - Authenticity of coding
             environment](#facilitator---authenticity-of-coding-environment)
@@ -80,7 +71,6 @@ title: 4. Emerging Learning Designs
     -   [Discussion on tensions in relation to Lit Review and
         REQUESTS](#discussion-on-tensions-in-relation-to-lit-review-and-requests)
 -   [Link to next chapter](#link-to-next-chapter)
-
 
 ## Research Questions - June 2023
 
@@ -595,8 +585,6 @@ It is useful to to disambiguate key terms at this stage .
 
 Conflicts / contradictioins  - stop progress - and involve barriers.
 
-
-
 On a smaller scale, design tensions exist. These do not block progress completely but may disrupt some activities.
 
 Also conbinations of tensions may create longer lasting and more serious conflicts if not resolved in some way.
@@ -609,16 +597,6 @@ In Sannino's later work on transformational agency TADS conflicts are examined -
 
 
 
-
-### Participant Conflicts / Obstacles
-
-
-#### Conflict / Barrier - Learners difficulties  writing valid code
-
-
-
-Code playground provides immediate feedback. I chose a code editing tool set which drew on relevant design principles explored in the literature review (Resnick and Rosenbaum, 2013).
-One of the principles that I prioritised in the choice of tools was that of immediate feedback for participants. For example, in the code editing interface of glitch.com shown in Illustration 1, changes made to the code on the left section take immediate effect in the resultant game on the right side of the screen.
 
 
 ### Facilitator Design Tensions
@@ -711,6 +689,12 @@ https://docs.google.com/document/d/1VL8FPnrBUbcpwL1nmGLCsF1t2JjkitQV_3N8DYeFcoM/
 
 
 #### TWO - Participant experience of Contradiction - Conflict - not enough support available
+
+**Conflict / Barrier - Learners difficulties  writing valid code**
+
+
+Code playground provides immediate feedback. I chose a code editing tool set which drew on relevant design principles explored in the literature review (Resnick and Rosenbaum, 2013).
+One of the principles that I prioritised in the choice of tools was that of immediate feedback for participants. For example, in the code editing interface of glitch.com shown in Illustration 1, changes made to the code on the left section take immediate effect in the resultant game on the right side of the screen.
 
 
 **Learner choice over game design vs templated approach**
