on scope of AT systems and removing tables

--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -215,20 +215,19 @@ Activity Theory allows researchers to identify intersecting or nested systems of
 
 Subsequent analysis of the identified activity systems allows both the researcher and practitioner to identifying existing and emerging tensions and to thus observe (spontaneous) or plan (designed) responses.
 
-Beyond the overarching objectives of learning via engaging with the programme (parents), being part of a fun club (children) and conducting research (researcher), the system scopes include:
+A short description of the activity systems follows using the to the vignette above to anchour the process.
+
+CHECK BACK TO METHODOLOGY TO EXPLAIN THIS NESTED APPROACH
+These descriptions mirror the work of AT researchers who conceptualise scope of activity as concentric circles from Broffennbrenner with "larger" scopes of cultural and societal goals and smaller, narrower, lower scopes of more personal activity.
+As previously explored this mirrors the Activity, Action and Operation hierarchy. 
+
+On a wider scale, the overarching objectives of learning via engaging with the programme (parents), being part of a fun club (children) and conducting research (researcher), the system scopes include:
 
 - Larger-scoped objective: creating a game which is fun to play and communicate an environmental theme
 - Mid-level objectives: identifying and implementing key game features to add to the game
-- Lower-level objectives: creating, changing and transporting game assets or changing code constructs to enact or change game elements
+- Narrow objectives: creating, changing and transporting game assets or changing code constructs to enact or change game elements
 
-A short description of the activity systems follows will illustrative diagrams / table followed by an illustrative commentary which makes references to the vignette above.   
-
-
-
-<br />
-<br />
-
-| **Subject**         | **Objective**             | **Tools & Processes**          |
+<!-- | **Subject**         | **Objective**             | **Tools & Processes**          |
 |------|-------------|------------|
 | Community of novice game makers | Creating a game which is fun to play and communicates an environmental theme     | Shared log in to code playground (glitch.com)   |
 |   |      | Shared log in to graphic editor (Piskel)    |
@@ -237,7 +236,7 @@ A short description of the activity systems follows will illustrative diagrams /
 |   |      | Group playtesting     |
 |        |     |
 
-Table 4.x.  Tools used in larger-scoped objective involving the wider community of notice coders collectively making separate games.
+Table 4.x.  Tools used in larger-scoped objective involving the wider community of notice coders collectively making separate games. -->
 
 <br />
 <br />
@@ -250,19 +249,8 @@ In the vignette of Toby's activity this wider objective is present in the facili
 
 Toby begins the game making session playing his own game which he has developed from a shared starting template. During the session he invites many other group members to play his game. He initiates and responds to may conversations around the difficultly of the game he has designed.
 
- Analysis TO COME.
+Analysis TO COME.
 
-
-| Subject         | Objective             | Tools & Processes          |
-|------|-------------|------------|
-| Groups or individual participants | Implementing game elements   | Code editing tool (glitch)   |
-|   |   |  Game preview tool (glitch) |
-|   |   |  Menu of game patterns at ggc-examples.glitch.me  |
-|   |   |  Step by step tutorials on FLOSS manuals  |
-|   |   |  Playtesting own game |
-|        |     |
-
-Table 4.x.  Tools used in mid-level objectives when selecting and planning implementation of game elements.
 
 <!-- One observation from he experimental course was that without significant support, the process of making a game is complex and there are many possible blockages in the process. -->
 
@@ -279,16 +267,16 @@ Other participants were less proficient using this online resources and used pri
 <br />
 <br />
 
-| **Subject**         | **Objective**             | **Tools & Processes**         
+<!-- | **Subject**         | **Objective**             | **Tools & Processes**         
 |----------------|-----------|------------|
 | Individuals (mostly)  | Implementing specific code or design tasks   |  Code editing tool (glitch)   |
 |   |   |  Code game preview tool (glitch) |
 |   |   |  Piskel  online graphics editor   |
 |   |   |  Step by step tutorials on FLOSS manuals  |
 |   |   |  Stand-alone code examples on glitch.com  |
-|        |     |
+|        |     | -->
 
-Table 4.x.  Tools used in lower-level objectives of implementing specific code structures or stages in creating game assets
+<!-- Table 4.x.  Tools used in lower-level objectives of implementing specific code structures or stages in creating game assets -->
 
 <br />
 Phaser; Glitch, Piskel; updated game template; quick start cards; step-by-step tutorials; code examples
@@ -558,9 +546,6 @@ To do this I added a learning dimensions map. This is explored in a later sectio
 
 
 
-
-
-
 ## Conflicts and design tensions experienced by participants and facilitator/s
 
 
@@ -581,22 +566,25 @@ https://docs.google.com/document/d/1FIPn2dEB2aCKZi5z05j69cnHgpGNXFh1_SPV6h5l12g/
 
 <!-- NOTE - DEVELOP THIS ASPECT OF INCLUSIVE ENVIRONMENT TO REDUCE STRESS - MOVE FROM NEXT CHAPTER?  -->
 
-It is useful to to disambiguate key terms at this stage .
+It is useful to return to the exploration of key terms of the theoretical framework at this stage.
 
-Conflicts / contradictioins  - stop progress - and involve barriers.
+Conflicts / contradictions  - stop progress - and involve barriers.
 
 On a smaller scale, design tensions exist. These do not block progress completely but may disrupt some activities.
 
-Also conbinations of tensions may create longer lasting and more serious conflicts if not resolved in some way.
+However combinations of tensions can compound to create longer lasting and more serious conflicts if not resolved.
 
-IN this chapter tensions are observed and potential tension  imagined by the facilitator. And in response interventions or new tools to help increase leaner agency either by offering new tools or removing barriers in process.
+In the process of reflection on sessions I both observed and project tensions between activity system elements and between different scopes of activity. In response, I introduced new tools or processes or removed existing or potential barriers. I observed participants responding to tensions both in expected and novel ways.
 
-It important here to examine the difference between  instrumental agency, and the work of learning designers to remove  barriers, vs the potential for learners to address and overcome them is relevant here.
+In this chapter I examine both tension and initial conflicts that occur in the first phase of of the learning design.
+
+It important to re-examine the difference between types of agency explored in the theoretical framework.
+
+Instrumental agency is relevant here to help examine and the work of learning designers to remove  barriers, Transformational and authorial agency serves to explore the potential for learners to address and overcome tensions and conflicts in their own way.
+
+(Relational agency?)
 
 In Sannino's later work on transformational agency TADS conflicts are examined - greater scope than tensions - thus larger shifts are implied.
-
-
-
 
 
 ### Facilitator Design Tensions
@@ -625,23 +613,24 @@ And drawn from motivations / objectives of researcher.
   other unexpected Benefits
 
   - could bring in other web creation resource, piskel, -->
+#### Facilitator / Participant - Projected Barrier / (tension) - Authenticity of Audience
 
-
-**Facilitator / Participant - Projected Barrier -  Learners may not find coding a project a motivating project if it is only a private activity with no authentic audience.**
+**Learners may not find coding a project a motivating project if it is only a private activity with no authentic audience**.
 
 Play Testing - each lesson can help with short term motivation of having a game product ready  for others to play.  Showcase events help longer-term motivation towards and aid prioritisation as learners near the end of their project.
 
-#### Drop? Not important enough for agency
-
-**Drop? Restricted community - e.g. why not scratch?**
+**Restricted vs extended community - e.g. why not scratch with online community?**
 
 Beyond technical considerations regarding scratch and use of physics etc,
-
 Learning technology in community settings can engender feelings of agency and motivation from part of wide network and the  diverse pathways. [@blunden_interdisciplinary_2009.
 
 Time consideration of the process of being involved in an online community may remove time spent doing real life playtesting.
 
 Also - the diversity of creations available on a online commmunity  could remove the more communal experience of the designed limitations.
+
+#### Drop? Not important enough for agency
+
+holding zone
 
 ### Participant conflicts / contractions
 
